--- a/src/main/resources/appli/todolistfx/accueil/loginView.fxml
+++ b/src/main/resources/appli/todolistfx/accueil/loginView.fxml
@@ -6,11 +6,14 @@
 
 <?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="appli.todolistfx.HelloController">
+      fx:controller="appli.todolistfx.accueil.LoginController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
     <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Button text="Hello (mais modifié) !" onAction="#onHelloButtonClick"/>
+
+    <Label fx:id="goodbyeText"/>
+    <Button text="Goodbye !" onAction="#onHelloButtonClick"/>
 </VBox>
