--- a/src/main/resources/appli/accueil/inscriptionView.fxml
+++ b/src/main/resources/appli/accueil/inscriptionView.fxml
@@ -18,7 +18,7 @@
       <TextField fx:id="emailField" layoutX="18.0" layoutY="88.0" />
       <Label layoutX="58.0" layoutY="121.0" text="mot de passe" />
       <TextField fx:id="motDePasseField" layoutX="18.0" layoutY="152.0" />
-      <Label layoutX="62.0" layoutY="188.0" text="Label error" textFill="RED" />
+      <Label fx:id="error" layoutX="62.0" layoutY="188.0" text="Label error" textFill="RED" />
       <Button fx:id="btnInscription" layoutX="60.0" layoutY="224.0" mnemonicParsing="false" text="S'inscrire" />
       <Button fx:id="btnConnexion" layoutX="55.0" layoutY="259.0" mnemonicParsing="false" text="Connexion" />
    </children>
