--- a/src/main/resources/appli/accueil/inscriptionView.fxml
+++ b/src/main/resources/appli/accueil/inscriptionView.fxml
@@ -6,26 +6,25 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<Pane prefHeight="630.0" prefWidth="191.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="appli.accueil.InscriptionController">
+<Pane prefHeight="630.0" prefWidth="442.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="appli.accueil.InscriptionController">
    <children>
-      <Label layoutX="21.0" layoutY="88.0" text="Page d'inscription">
+      <Label layoutX="150.0" layoutY="54.0" text="Page d'inscription">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
       <Label layoutX="69.0" layoutY="218.0" text="prenom" />
-      <TextField fx:id="nomField" layoutX="21.0" layoutY="178.0" />
+      <TextField fx:id="nomField" layoutX="183.0" layoutY="149.0" />
       <Label layoutX="78.0" layoutY="153.0" text="nom" />
-      <TextField fx:id="prenomField" layoutX="21.0" layoutY="243.0" />
+      <TextField fx:id="prenomField" layoutX="183.0" layoutY="223.0" />
       <Label layoutX="79.0" layoutY="280.0" text="email" />
-      <TextField fx:id="emailField" layoutX="21.0" layoutY="307.0" />
+      <TextField fx:id="emailField" layoutX="183.0" layoutY="285.0" />
       <Label layoutX="60.0" layoutY="340.0" text="mot de passe" />
-      <TextField fx:id="motDePasseField" layoutX="21.0" layoutY="365.0" />
+      <TextField fx:id="motDePasseField" layoutX="183.0" layoutY="344.0" />
       <Label layoutX="57.0" layoutY="402.0" text="Confirmation" />
-      <TextField fx:id="confirmationField" layoutX="21.0" layoutY="433.0" />
-      <Label fx:id="error" layoutX="66.0" layoutY="469.0" text="Label error" textFill="RED" />
-      <Button fx:id="btnInscription" layoutX="64.0" layoutY="513.0" mnemonicParsing="false" onAction="#onSInscrireButtonClick" text="S'inscrire" />
-      <Button fx:id="btnConnexion" layoutX="57.0" layoutY="554.0" mnemonicParsing="false" onAction="#onIConnexionButtonClick" text="Connexion" />
+      <TextField fx:id="confirmationField" layoutX="183.0" layoutY="398.0" />
+      <Label fx:id="error" layoutX="183.0" layoutY="451.0" text="Label error" textFill="RED" />
+      <Button fx:id="btnInscription" layoutX="180.0" layoutY="493.0" mnemonicParsing="false" onAction="#onInscriptionButtonClick" text="S'inscrire" />
+      <Button fx:id="btnConnexion" layoutX="175.0" layoutY="547.0" mnemonicParsing="false" onAction="#onIConnexionButtonClick" text="Vers la Connexion" />
    </children>
 </Pane>
