--- a/src/main/resources/appli/accueil/loginView.fxml
+++ b/src/main/resources/appli/accueil/loginView.fxml
@@ -21,7 +21,7 @@
       <Label fx:id="error" layoutX="85.0" layoutY="295.0" text="Label pour erreur" textFill="#ff1500" />
    
           <Button fx:id="btnInscription" layoutX="84.0" layoutY="387.0" onAction="#onSInscrireButtonClick" text="Vers l'inscription" />
-       <Button fx:id="btnConnexion" layoutX="93.0" layoutY="355.0" onAction="#onConnexionButtonClick" text="Se connecter" />
+       <Button fx:id="btnConnexion" layoutX="93.0" layoutY="355.0" onAction="#handleLogin" text="Se connecter" />
        <Button fx:id="btnMotDePasseOublie" layoutX="74.0" layoutY="420.0" onAction="#onMotDePasseOublieButtonClick" text="Mot de passe oublié" />
    
           <Label fx:id="motDePasseOublie" layoutX="195.3333282470703" layoutY="468.6666564941406" />
